[gd_scene load_steps=7 format=2]

[ext_resource path="res://ArtAssets/MainMenu.png" type="Texture" id=1]
[ext_resource path="res://Settings.gd" type="Script" id=2]
[ext_resource path="res://Gobold Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ArtAssets/Back_Button.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 300, 200 )

[node name="Settings" type="Sprite"]
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )

[node name="Ball_Speed_Slider" type="HSlider" parent="."]
margin_left = 328.0
margin_top = 1026.0
margin_right = 792.0
margin_bottom = 1215.0
min_value = 50.0
max_value = 300.0
value = 80.0

[node name="Ball_Speed_Label" type="Label" parent="Ball_Speed_Slider"]
margin_right = 222.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ball Speed"

[node name="Ball_Speed_Count" type="Label" parent="Ball_Speed_Slider"]
margin_left = 420.0
margin_right = 446.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Max_Obstacle_Slider" type="HSlider" parent="."]
margin_left = 328.0
margin_top = 1200.0
margin_right = 792.0
margin_bottom = 1389.0
min_value = 4.0
max_value = 12.0
value = 6.0

[node name="Max_Obstacle_Slider_Label" type="Label" parent="Max_Obstacle_Slider"]
margin_right = 222.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Max Obstacles"

[node name="Max_Obstacle_Count" type="Label" parent="Max_Obstacle_Slider"]
margin_left = 420.0
margin_right = 446.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Min_Obstacle_Slider" type="HSlider" parent="."]
margin_left = 328.0
margin_top = 1374.0
margin_right = 792.0
margin_bottom = 1563.0
min_value = 1.0
max_value = 8.0
value = 3.0

[node name="Min_Obstacle_Slider_Label" type="Label" parent="Min_Obstacle_Slider"]
margin_right = 222.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Min Obstacles"

[node name="Min_Obstacle_Count" type="Label" parent="Min_Obstacle_Slider"]
margin_left = 420.0
margin_right = 446.0
margin_bottom = 87.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 2

[node name="Back_Button" type="TouchScreenButton" parent="."]
position = Vector2( 50, 50 )
scale = Vector2( 0.2, 0.2 )
normal = ExtResource( 4 )
shape = SubResource( 2 )

[connection signal="value_changed" from="Ball_Speed_Slider" to="." method="_on_Ball_Speed_Slider_value_changed"]
[connection signal="value_changed" from="Max_Obstacle_Slider" to="." method="_on_Max_Obstacle_Slider_value_changed"]
[connection signal="value_changed" from="Max_Obstacle_Slider" to="." method="_on_Ball_Speed_Slider_value_changed"]
[connection signal="value_changed" from="Min_Obstacle_Slider" to="." method="_on_Min_Obstacle_Slider_value_changed"]
[connection signal="value_changed" from="Min_Obstacle_Slider" to="." method="_on_Ball_Speed_Slider_value_changed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_Back_Button_pressed"]
